assets/css/style.css
/* header */



#logo {
    padding: 0;
    margin: 0;
    position: relative;
    float: left;
    padding-top: 10px;
    padding-left: 10px;
    letter-spacing: 5px;
    font-size: 40px;
}

#logo a {
    color: #4a4a4a;
    text-decoration: none;
}

header {
    font-family: Bebas Neue, sans-serif;
}

nav ul{
    float: right;
    width: 50%;
    text-align: right;
}

nav ul li {
    display: inline-block;
    width: 15%;
    text-align: center;
}

nav li a {
    text-decoration: none;
    color: #4a4a4a;
    font-size: 30px;
    transition: 0.5s;
}

nav li a:hover {
    background-color: #AE1F2B;
    padding: 0 10px;
    border-radius: 5px;
    color: white;
    font-size: 31px;
}

/* about */

#about-img {
    background: url(../images/Red\ keyboard\ dark.JPEG);
    background-size: cover;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 500px;
    overflow: hidden;
    position: relative;
}

#info1 {
    position:relative;
    width: 30%;
    padding-left: 15px;
    color: white;
    font-family:source serif pro, sans-serif;
    float: left;
}

#info2 {
    position: absolute;
    width: 20%;
    padding-right: 15px;
    color: white;
    font-family:source serif pro, sans-serif;
    text-align: right;
    bottom: 8px;
    right: 10px;
}

#about h2 {  
    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

/* event info */

#tickets-logo {
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
    padding-bottom: 50px;
}

#event-info {
    width: 100%;
}

#event-info-list {
    width: 100%;
    list-style-type: none;
    padding: 0;
}

.textbox { 
    width: 25%;
    height: 300px;
    float: left;
    text-align: center;
    font-family:source serif pro, sans-serif;
    font-size: 30px;
    color: #4a4a4a;
}

.textbox h3 {
    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

.textbox hr {
    width: 95%;
}

#even-info-list li{
    list-style: none;
    height: 100px;
}

#ticket-button {
    display: table;
}

#ticket-button h3 {
    display: table-cell;
    vertical-align: middle;
}

#ticket-button a {
    text-decoration: none;
    background-color: #AE1F2B;
    padding: 25px 50px;
    border-radius: 5px;
    color: white;
    transition: 0.5s;
}

#ticket-button a:hover {
    text-decoration: none;
    color: #4a4a4a;
    background-color: white;
    border: 1px #4a4a4a solid;
}

/* stay */

#stay-logo {
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
    padding-bottom: 50px;
}

.hotels {
    color: #4a4a4a;
}

.hotels h2, h3 {
    font-family: bebas neue, sans-serif;
    letter-spacing: 5px;
    font-size: 30px;
}

#grand-hyatt  {
    width: 100%;
}

#grand-hyatt img {
    width: 33%;
    height: 400px;
    float: left;
}

#grand-hyatt p {
    margin: 0 auto;
    text-align: center;
    width: 33%;
    height: 400px;
    float: left;
    font-family: source serif pro, sans-serif;
    font-size: 30px;
    word-spacing: 5px;
    line-height: 50px;
}

#view-rooms {
    float: right;
    width: 33%;
    height: 400px;
    float: left;
    display: table;
}

#view-rooms h2 {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
}

#view-rooms a {
    text-decoration: none;
    background-color: #AE1F2B;
    padding: 25px 50px;
    border-radius: 5px;
    color: white;
    transition: 0.5s;
}

#view-rooms a:hover {
    text-decoration: none;
    color: #4a4a4a;
    background-color: white;
    border: 1px #4a4a4a solid;
}

#no-rooms-container {
    padding-top: 10px;
}

#no-rooms {
    font-family: source serif pro, sans-serif;
    font-size: 30px;
    text-align: center;
}

#walking-distance {
    width: 100%;
}

.walking-distance img {
    height: 400px;
}

#walking-distance div {
    width: 10%;
    display: inline-block;
    padding-left: 15%;
    padding-right: 15%;
} 


#uber {
    width: 100%;
}

.uber h3 {
    display: inline-block;
}

.uber img {
    height: 400px;
}

#uber div {
    width: 10%;
    display: inline-block;
    padding-left: 15%;
    padding-right: 15%;
} 

